--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "vue-lazyload": "^1.2.6"
   }
 }
