--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cookie-universal-nuxt": "^2.0.14",
     "core-js": "^2.6.5",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
+    "js-cookie": "^2.2.0",
     "koa": "^2.6.2",
     "nuxt": "^2.4.0"
   },
