--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "jsonp": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "nodemon": "^1.18.9",
